# stack-run-auto

./: .gitignore  .travis.yml  DistributedProcess.hs  Makefile  README.md  extract-dependencies-simple  file-modules  hackage-dependencies  module-package  package.json  stack-run-auto  stack-try
extract-dependencies/: LICENSE  extract-dependencies.cabal  stack.yaml
extract-dependencies/src/: Main.hs
extract-dependencies/src/Development/: ExtractDependencies.hs
file-modules/: .gitignore  LICENSE  Makefile  file-modules.cabal  stack-6.9.yaml  stack-nightly.yaml  stack.yaml
file-modules/src/: Main.hs
file-modules/src/Development/: FileModules.hs
package-description-remote/: package-description-remote.cabal
package-description-remote/src/Distribution/PackageDescription/: Remote.hs
stack-run-auto/: stack-run-auto.cabal  stack.yaml
stack-run-auto/app/: Main.hs  ModulePackage.hs
stack-run-auto/src/: StackRunAuto.hs
test-files/: DistributedProcess.hs  Test.hs  Test2.hs
