name:                extract-dependencies
version:             0.1.0.0
synopsis:            Given a hackage package outputs the list of its dependencies.
homepage:            https://github.com/yamadapc/stack-run-auto/extract-dependencies
license:             MIT
license-file:        LICENSE
author:              André Barnabá
maintainer:          asakeron@gmail.com
copyright:           2015 André Barnabá
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable extract-dependencies
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.8 && < 5
                     , async
                     , containers
                     , Cabal >= 1.22 && < 2
                     , package-description-remote
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Development.ExtractDependencies
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.8 && < 5
                     , async
                     , containers
                     , Cabal >= 1.22 && < 2
                     , package-description-remote
  default-language:    Haskell2010
