name:                extract-dependencies
version:             0.2.0.1
synopsis:            Given a hackage package outputs the list of its dependencies.
description:         Given a hackage package outputs the list of its dependencies. See our GitHub README. This is part of stack-run-auto.
homepage:            https://github.com/yamadapc/stack-run-auto
license:             MIT
license-file:        LICENSE
author:              André Barnabá
maintainer:          asakeron@gmail.com
copyright:           2015 André Barnabá
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable extract-dependencies
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Development.ExtractDependencies
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.8 && < 5
                     , async
                     , containers
                     , Cabal >= 1.22 && < 2
                     , package-description-remote
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Development.ExtractDependencies
  build-depends:       base >= 4.8 && < 5
                     , async
                     , containers
                     , Cabal >= 1.22 && < 2
                     , package-description-remote
  default-language:    Haskell2010
