name: file-modules
version: 0.1.0.0
synopsis: Takes a Haskell source-code file and outputs the module it
        . imports. Follows links to local modules as well.
-- description:
homepage: https://github.com/yamadapc/stack-run-auto
license: MIT
license-file: LICENSE
author: Pedro Tacla Yamada
maintainer: tacla.yamada@gmail.com
copyright: Copyright (c) Pedro Tacla Yamada 2015
category: Development
build-type: Simple
cabal-version: >=1.10

executable file-modules
  main-is: Main.hs
  build-depends: base >=4.5 && <5
               , haskell-src-exts >= 1.17 && < 2
  hs-source-dirs: src
  default-language: Haskell2010
