name: file-modules
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Copyright (c) Pedro Tacla Yamada 2015
maintainer: tacla.yamada@gmail.com
homepage: https://github.com/yamadapc/stack-run-auto
synopsis: Takes a Haskell source-code file and outputs the modules it
          . imports. Follows links to local modules as well.
category: Development
author: Pedro Tacla Yamada

library
    exposed-modules:
        Development.FileModules
    build-depends:
        MissingH -any,
        directory -any,
        async -any,
        base >=4.5 && <5,
        filepath -any,
        haskell-src-exts >=1.17 && <2,
        stm -any,
        stm-containers -any
    default-language: Haskell2010
    hs-source-dirs: src

executable file-modules
    main-is: Main.hs
    build-depends:
        base >=4.5 && <5,
        MissingH -any,
        directory -any,
        async -any,
        base >=4.5 && <5,
        filepath -any,
        haskell-src-exts >=1.17 && <2,
        stm -any,
        stm-containers -any
    default-language: Haskell2010
    hs-source-dirs: src

