name:                package-description-remote
version:             0.2.0.0
synopsis:            Fetches a 'GenericPackageDescription' from Hackage
description:         Please see README.md
homepage:            http://github.com/yamadapc/stack-run-auto/package-description-remote
license:             MIT
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
copyright:           Copyright (c) 2015 Pedro Tacla Yamada
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Distribution.PackageDescription.Remote
  build-depends:       Cabal >= 1.22.4.0
                     , base >= 4.7 && < 5
                     , bytestring >= 0.10.6.0
                     , lens >= 4.12.3
                     , lens-aeson >= 1.0.0.5
                     , wreq >= 0.4.0.0
  default-language:    Haskell2010

test-suite package-description-remote-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , package-description-remote
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yamadapc/stack-run-auto
