name:                stack-run-auto
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/yamadapc/stack-run-auto#readme
license:             MIT
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
copyright:           Copyright (c) 2015 Pedro Tacla Yamada
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     StackRunAuto
  build-depends:       base >= 4.7 && < 5
                     , time
                     , process
                     , text
                     , lens-aeson
                     , lens
                     , wreq
                     , MissingH
                     , stm-containers
                     , async
                     , extract-dependencies
                     , file-modules
  default-language:    Haskell2010

executable module-package
  hs-source-dirs:      app
  main-is:             ModulePackage.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , time
                     , process
                     , text
                     , lens-aeson
                     , lens
                     , wreq
                     , MissingH
                     , stm-containers
                     , async
                     , extract-dependencies
                     , file-modules
                     , stack-run-auto
  default-language:    Haskell2010

executable stack-run-auto
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , time
                     , process
                     , text
                     , lens-aeson
                     , lens
                     , wreq
                     , MissingH
                     , stm-containers
                     , async
                     , extract-dependencies
                     , file-modules
                     , stack-run-auto
  default-language:    Haskell2010

test-suite stack-run-auto-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , time
                     , process
                     , text
                     , lens-aeson
                     , lens
                     , wreq
                     , MissingH
                     , stm-containers
                     , async
                     , extract-dependencies
                     , file-modules
                     , stack-run-auto
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yamadapc/stack-run-auto
